nymea-plugins-modbus (1.7.018) jammy; urgency=medium

  * Limit power production of Kaco Nx3
  * Fix control of newer FoxESS WB v3 versions
  * Support for Solax X3 IES (Copy of Solax X3 G4)

 -- Luis Reber <l.reber@consolinno.de> Thu, 07 Aug 11:34:00 +0200

nymea-plugins-modbus (1.7.017-1) jammy; urgency=medium

  * Added Zhejiang Chint DTSU666 smart meter
    - Added outlier detection
  * Added Support for AlphaInnotec Smart Home Interface
  * Fix for Chint DTSU66 with CT clamps
  * Growatt: support for LPP changed: limit power input (W) instead of rate (%)
  * Sofarsolar HYD / Azzurro hybrid inverters: LPP added
  * Fix Alfen wrong energy value ESEMS-1800
  * Add support for FoxESS R-Series
    - Combine Wallbox and Inverter into one plugin
  * Lambda: 
    - accuracy improvements and warning suppression
    - added LPC GPIO interface
  * Update libnymea-modbus
  * sungrowsh: Use queued requests
  * SMA: 
    - Reduce warnings, add fixes from nymea team
    - speedwireInverter: hybrid inverter support, add battery capacity
  * Siemens PAC2200: Initial Support
  * Add a standalone Solax X3 EVC integration
  * Kostal: fixed Meter totalEnergyProduced
  * Add Support for Solax X1/X3-HAC
  * Sungrow SH: Fix battery power
  * Add support for my-PV heating rods (AC ELWA 2, AC-THOR, AC-THOR 9s)
  * Victron: fix total PV power

 -- Luis Reber <l.reber@consolinno.de> Thu, 28 May 2025 08:49:00 +0200

nymea-plugins-modbus (1.7.016) jammy; urgency=medium

  * Solax X3: Fix writing max charging register on change
  * PhoenixConnect: Add currentPower states to all wallboxes

 -- Luis Reber <l.reber@consolinno.de> Thu, 23 May 2025 13:49:00 +0200

nymea-plugins-modbus (1.7.015-1) jammy; urgency=medium

  * Fix Sungrow SH battery capacity
  * Added block write to modbus generator
  * Kaco NH3: Fix PV and Bat power
  * Solax X3 EVC: Fix charging interruption
  * Solax X3 / Qcells G4:
    - Add second meter as PV-Kit
    - Add control for max charging current