@@ -3,6 +3,7 @@ nymea-plugins-modbus (1.7.018) jammy; urgency=medium
   * Limit power production of Kaco Nx3
   * Fix control of newer FoxESS WB v3 versions
   * Support for Solax X3 IES (Copy of Solax X3 G4)
+  * Solax X3: support for LPP
 
  -- Luis Reber <l.reber@consolinno.de> Thu, 07 Aug 11:34:00 +0200
 
